# memory-management

homework/: CMakeLists.txt  shared_ptr.hpp  shared_ptr_tests.cpp
homework/shared_ptr/: shared_ptr.hpp  shared_ptr_tests.cpp  weak_ptr.hpp  weak_ptr_tests.cpp
homework/unique_ptr/: CMakeLists.txt  unique_ptr.hpp  unique_ptr_tests.cpp
